# llm-doc

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  NOTICE  README.html  README.md  RUNBOOK.md  THIRD-PARTY-NOTICES.md  docmcp.sh  local_deploy.sh  pyproject.toml  remote_deploy.sh  tokens.json.example
clients/: codex-config.example.toml
clients/skill/: SKILL.md
clients/skills/doc-find/: SKILL.md
clients/skills/doc-html-report/: SKILL.md  render.py
clients/skills/doc-html-report/templates/: report.html
clients/skills/doc-report/: SKILL.md
clients/skills/docs/: SKILL.md
console-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console-ui/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx
console-ui/src/components/: JobLog.tsx  Layout.tsx  ui.tsx
console-ui/src/pages/: Access.tsx  Audit.tsx  Config.tsx  Connect.tsx  Dashboard.tsx  Groups.tsx  Health.tsx  Ingest.tsx  Login.tsx  Schedule.tsx  Tokens.tsx  Wizard.tsx
docker/: Caddyfile  Dockerfile  docker-compose.yml
docs/: AUTHORING.md  CONSOLE.md  OPERATING.md  PORTAL.md  REFACTOR-PLANS.md  docmcp-project-slides-transcript.md  docmcp-project-slides.html
lib/: deploy-common.sh
models/RapidOcr/: NOTICE
models/bge-small-en-v1.5/: .gitattributes  LICENSE  README.md
models/docling-project--docling-layout-heron/: README.md  config.json  preprocessor_config.json
models/docling-project--docling-models/: .gitattributes  .gitignore  LICENSE  README.md  config.json
models/docling-project--docling-models/model_artifacts/tableformer/accurate/: tm_config.json
models/docling-project--docling-models/model_artifacts/tableformer/fast/: tm_config.json
src/docmcp/: __init__.py  __main__.py  atomicio.py  auth.py  config.py  docstore.py  middleware.py  obs.py  rbac.py  server.py  tokenstore.py  tools.py  types.py
src/docmcp/cli/: __init__.py
src/docmcp/console/: __init__.py  app.py  audit.py  auth.py  commands.py  reads.py  routes.py  runner.py
src/docmcp/ingest/: __init__.py  indexer.py  parsers.py  pipeline.py  rich_parsers.py
src/docmcp/portal/: __init__.py  app.py  render.py  sessions.py  staging.py  validate.py
src/docmcp/search/: __init__.py  base.py  fts5.py  ripgrep.py  vector.py
tests/: conftest.py  test_auth.py  test_console_api.py  test_console_commands.py  test_console_static.py  test_deploy_env.sh  test_docmcp_sh.py  test_docstore_traversal.py  test_ingest.py  test_ingest_rich.py  test_rbac.py  test_reliability.py  test_smoke.py  test_tools.py  test_vector.py
tests/fixtures/: tokens.json
tests/fixtures/docs/: guide.html
tests/fixtures/raw/public/: notes.txt  welcome.md
tests/fixtures/raw/team-fw/: design.md  sample.py
tests/integration/: test_console_api.py  test_ingest_rich.py  test_portal.py  test_vector.py
tests/shell/: test_deploy_env.sh
tests/unit/: test_auth.py  test_cli_reads.py  test_cli_writes.py  test_console_commands.py  test_console_runner.py  test_console_static.py  test_docmcp_sh.py  test_groups.py  test_ingest.py  test_ingest_pdf.py  test_reliability.py  test_resource_bounds.py  test_review_fixes.py  test_search.py  test_tokenstore.py  test_tools.py
